Update height filter-items to stop scrolling items out of view

--- a/src/styles/filter-component.css
+++ b/src/styles/filter-component.css
@@ -224,7 +224,7 @@ button {
   overscroll-behavior: contain;
   -webkit-overflow-scrolling: touch;
   overflow-y: none;
-  height: 100vh;
+  height: 60vh;
 }
 
 .filter-item {
